--- a/E0322052_DS.ipynb
+++ b/E0322052_DS.ipynb
@@ -189,7 +189,7 @@
         },
         "outputId": "28d59c41-06db-440e-e77d-bfa33ef8ae93"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         },
         "outputId": "f0fba0df-710a-43cd-d7f6-e86c1066fc35"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
         },
         "outputId": "22d8afa9-155e-4c8f-92ce-518dad2da68c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,19 +267,193 @@
       "source": [
         "f=open(\"/content/demo.txt.txt\",\"w\")\n",
         "f.write(\"hellllllo-Now the file has more content!\")\n",
-        "f.close()"
+        "f.close()\n",
+        "\n",
+        "f=open(\"/content/demo.txt.txt\",\"r\")\n",
+        "print(f.read())"
       ],
       "metadata": {
-        "id": "klwPo5I2Dw08"
+        "id": "klwPo5I2Dw08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8405e41d-287d-4df0-a6b0-b98f5af14926"
       },
-      "execution_count": 6,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hellllllo-Now the file has more content!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.remove(\"/content/demo.txt.txt\")"
+      ],
+      "metadata": {
+        "id": "JV4t_N2WzJmq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "if os.path.exists(\"demo1.txt\"):\n",
+        "  os.remove(\"demo1.txt\")\n",
+        "else:\n",
+        "  print(\"The file does not exist\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D4iB3p-TzJpO",
+        "outputId": "12a060a1-7886-4411-a378-df3e52b300be"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The file does not exist\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"demo.txt\", \"r\") as file:\n",
+        "    data=file.readlines()\n",
+        "    for line in data:\n",
+        "        word=line.split()\n",
+        "        print(word)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u0gVTrhhzJr3",
+        "outputId": "b3ef9bf5-3ce4-4942-ac92-e95f281a8a15"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['hello', 'hi']\n",
+            "['im', 'okay']\n",
+            "['who', 'are', 'you']\n",
+            "['im', 'done']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"file.txt\",\"w\") as f:\n",
+        "    f.write(\"Hello World!!How are you!\")"
+      ],
+      "metadata": {
+        "id": "DBfLuqGzzJwS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "data={'name':'raja','age':30}\n",
+        "with open(\"data.json\",\"w\") as f:\n",
+        "    json.dump(data,f)\n",
+        "\n",
+        "with open('data.json','r')as f:\n",
+        "  data=json.load(f)\n",
+        "  print(data)"
+      ],
+      "metadata": {
+        "id": "Qg2UIf_hDw4X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5f939bc0-f059-4eb6-95d0-8cfe7080ea6d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'raja', 'age': 30}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=input(\"Enter a Word:\")\n",
+        "with open(\"demo.txt\",\"r\")as f:\n",
+        "  content=f.read()\n",
+        "  if a in content:\n",
+        "    print(\"Found\")\n",
+        "  else:\n",
+        "    print(\"Not Found\")"
+      ],
+      "metadata": {
+        "id": "IshTc2IU3VOU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "88d2ea22-0270-4766-b091-44f86ee257b4"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a Word:hi\n",
+            "Found\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mcdxe-BI3VQR"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Qg2UIf_hDw4X"
+        "id": "wWrRS23x3VSY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_ip8y5OY3VVU"
       },
       "execution_count": null,
       "outputs": []
@@ -288,7 +462,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaEl+fD7LZFOL5/5/yPXAl",
+      "authorship_tag": "ABX9TyM7b6lLr7UaqblxZH83xIDq",
       "include_colab_link": true
     },
     "kernelspec": {
