--- a/API_DS.ipynb
+++ b/API_DS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfQPrypW7juXEqK1TeIgtK",
+      "authorship_tag": "ABX9TyP9Dw4AEpKby3dcp5riNE2n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,9 +87,85 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from pycoingecko import CoinGeckoAPI\n",
+        "cg=CoinGeckoAPI()\n",
+        "btc_data=cg.get_coin_market_chart_by_id(id='bitcoin',vs_currency='usd',days=30)\n",
+        "for timestamp, price in btc_data['prices'][:5]:\n",
+        "  print(f\"Timestamp:{timestamp}, Price: {price}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FkWDamhfHEds",
+        "outputId": "0a1c5094-3480-4a3c-abe1-1eb129aba455"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Timestamp:1748851414402, Price: 105368.68890560322\n",
+            "Timestamp:1748855018670, Price: 105435.16251218649\n",
+            "Timestamp:1748858625008, Price: 104625.38503451426\n",
+            "Timestamp:1748862236075, Price: 104408.43975478904\n",
+            "Timestamp:1748865821533, Price: 104111.85699254976\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "FkWDamhfHEds"
+        "id": "BqmfCP3UKw3n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_BcO1AjuKxB0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ShH4yCOVKxFN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FH0zXkkkKxPM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Otsiy-JvKxc0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wqQtU4nUKxgR"
       },
       "execution_count": null,
       "outputs": []
